fixed image scroll on mobile

--- a/style.css
+++ b/style.css
@@ -39,7 +39,6 @@
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
-  background-repeat: no-repeat;
 }
 
 @media only screen and (max-width: 768px) {
@@ -56,10 +55,13 @@
 
 .scrollable-image-container-one {
   background-image: url(images/electrician.jpg);
+  background-repeat: no-repeat;
 }
 
 .scrollable-image-container-two {
   background-image: url(images/test.jpg);
+  background-repeat: no-repeat;
+
 }
 
 body {
